--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <hutool.version>5.6.3</hutool.version>
         <hibernate-validator.version>6.2.0.Final</hibernate-validator.version>
         <kaptcha.version>2.3.2</kaptcha.version>
+        <xxl-job.version>2.3.0</xxl-job.version>
     </properties>
 
 
@@ -223,6 +224,12 @@
                 <groupId>com.github.penggle</groupId>
                 <artifactId>kaptcha</artifactId>
                 <version>${kaptcha.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.xuxueli</groupId>
+                <artifactId>xxl-job-core</artifactId>
+                <version>${xxl-job.version}</version>
             </dependency>
 
         </dependencies>
