--- a/rjsoft-common/pom.xml
+++ b/rjsoft-common/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>commons-io</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
