--- a/rjsoft-web/src/main/resources/application-other.yml
+++ b/rjsoft-web/src/main/resources/application-other.yml
@@ -1,12 +1,12 @@
 spring:
   #数据库连接
   datasource:
-    url: jdbc:mysql://218.28.133.52:7111/rjcloud_cms_db?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://xxx.xx.xxx.xxx:7111/rjcloud_cms_db?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: hky4yhl9t
+    password: xxx
   #redis
   redis:
-    host: 218.28.133.52
+    host: xxx.xxx.xxx.xxx
 #    password: 123456
     port: 7113
     timeout: 5000
@@ -16,6 +16,16 @@ spring:
         max-wait: -1
         max-idle: 20
         min-idle: 0
+  servlet:
+    multipart:
+      resolve-lazily: true
+      max-file-size: 50MB
+      max-request-size: 50MB
+
+server:
+  tomcat:
+    max-swallow-size: 100MB
+
 #文件存储路径
 file:
   path: D:\other\file
