--- a/rjsoft-web/src/main/resources/application-other.yml
+++ b/rjsoft-web/src/main/resources/application-other.yml
@@ -1,9 +1,9 @@
 spring:
   #数据库连接
   datasource:
-    url: jdbc:mysql://xxx.xx.xxx.xxx:7111/rjcloud_cms_db?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://xxx.xxx.xxx.xxx:7111/rjcloud_cms_db?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
-    password: xxx
+    password: hky4yhl9t
   #redis
   redis:
     host: xxx.xxx.xxx.xxx
@@ -24,7 +24,7 @@ spring:
 
 server:
   tomcat:
-    max-swallow-size: 100MB
+    max-swallow-size: -1
 
 #文件存储路径
 file:
