feat: 配置文件用户名密码加密

--- a/rjsoft-web/src/main/resources/application.yml
+++ b/rjsoft-web/src/main/resources/application.yml
@@ -47,3 +47,9 @@ JohnYehyo:
   captchaType: math
   # 加密公钥
   key: 113813559663B1D1
+
+jasypt:
+  encryptor:
+    password: JohnYehyo
+    algorithm: PBEWithMD5AndDES
+    iv-generator-classname: org.jasypt.iv.NoIvGenerator
