--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         <hibernate-validator.version>6.2.0.Final</hibernate-validator.version>
         <kaptcha.version>2.3.2</kaptcha.version>
         <xxl-job.version>2.3.0</xxl-job.version>
+        <jasypt-springboot-starter.version>3.0.4</jasypt-springboot-starter.version>
     </properties>
 
 
@@ -230,6 +231,12 @@
                 <groupId>com.xuxueli</groupId>
                 <artifactId>xxl-job-core</artifactId>
                 <version>${xxl-job.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.ulisesbocchio</groupId>
+                <artifactId>jasypt-spring-boot-starter</artifactId>
+                <version>${jasypt-springboot-starter.version}</version>
             </dependency>
 
         </dependencies>
