--- a/rjsoft-web/pom.xml
+++ b/rjsoft-web/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>kaptcha</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
