--- a/rjsoft-web/src/main/resources/application-dev.yml
+++ b/rjsoft-web/src/main/resources/application-dev.yml
@@ -2,8 +2,8 @@ spring:
   #数据库连接
   datasource:
     url: jdbc:mysql://192.168.5.233:3306/rjcloud_cms_db?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: root
-    password: 123456
+    username: ENC(Jzg6IWilw6htxwENf3WYfQ==)
+    password: ENC(y9QP7MkwBO93D3YiFuyYrA==)
   #redis
   redis:
     host: 192.168.5.233
