feat: 站点名称自动转拼音存入站点目录

--- a/rjsoft-common/pom.xml
+++ b/rjsoft-common/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>xxl-job-core</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
