--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
         <kaptcha.version>2.3.2</kaptcha.version>
         <xxl-job.version>2.3.0</xxl-job.version>
         <jasypt-springboot-starter.version>3.0.4</jasypt-springboot-starter.version>
+        <pinyin4j.version>2.5.1</pinyin4j.version>
     </properties>
 
 
@@ -237,6 +238,12 @@
                 <groupId>com.github.ulisesbocchio</groupId>
                 <artifactId>jasypt-spring-boot-starter</artifactId>
                 <version>${jasypt-springboot-starter.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.belerweb</groupId>
+                <artifactId>pinyin4j</artifactId>
+                <version>${pinyin4j.version}</version>
             </dependency>
 
         </dependencies>
