--- a/rjsoft-web/pom.xml
+++ b/rjsoft-web/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>jasypt-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
