feat: 初始密码登录/密码使用超出限制时长要求修改密码

--- a/rjsoft-web/src/main/resources/application.yml
+++ b/rjsoft-web/src/main/resources/application.yml
@@ -48,6 +48,10 @@ JohnYehyo:
   captchaType: math
   # 加密公钥
   key: 113813559663B1D1
+  # 密码使用时长限制(天)
+  pwd_time: 30
+  # 历史密码记录数
+  pwd_history: 2
 
 jasypt:
   encryptor:
