--- a/rjsoft-web/src/main/resources/application.yml
+++ b/rjsoft-web/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   application:
     name: rjsoft
   profiles:
-    active: prod
+    active: dm
   thymeleaf:
     cache: false
     mode: HTML
