--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
         <xxl-job.version>2.3.0</xxl-job.version>
         <jasypt-springboot-starter.version>3.0.4</jasypt-springboot-starter.version>
         <pinyin4j.version>2.5.1</pinyin4j.version>
+        <dm.version>18</dm.version>
     </properties>
 
 
@@ -244,6 +245,18 @@
                 <groupId>com.belerweb</groupId>
                 <artifactId>pinyin4j</artifactId>
                 <version>${pinyin4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.rjcloud.third</groupId>
+                <artifactId>DmJdbcDriver18</artifactId>
+                <version>${dm.version}</version>
             </dependency>
 
         </dependencies>
