--- a/rjsoft-dao/pom.xml
+++ b/rjsoft-dao/pom.xml
@@ -46,6 +46,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.rjcloud.third</groupId>
+            <artifactId>DmJdbcDriver18</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
