--- a/rjsoft-web/pom.xml
+++ b/rjsoft-web/pom.xml
@@ -95,6 +95,16 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.rjcloud.third</groupId>
+            <artifactId>DmJdbcDriver18</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
